Atualização a partir do Github

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
     <h1>Minha Página HTML</h1>
     <h2>Alterando a página HTML</h2>
+    <h3> Adicionando conteúdo apartir do Github </h3>
 </body>
 
 </html>
